--- a/components/contact/contact-form.module.css
+++ b/components/contact/contact-form.module.css
@@ -15,6 +15,12 @@
   text-align: left;
 }
 
+.contact h2 {
+  font-size: var(--size-8);
+  margin: var(--size-4) 0;
+  text-align: left;
+}
+
 .form label {
   display: block;
   font-family: "Oswald", sans-serif;
@@ -68,6 +74,10 @@
 @media (min-width: 768px) {
   .contact h1 {
     font-size: var(--size-16);
+    text-align: center;
+  }
+  .contact h2 {
+    font-size: var(--size-8);
     text-align: center;
   }
 }
